More work on UI

--- a/bin/index.html
+++ b/bin/index.html
@@ -6,11 +6,8 @@
 	<link rel="shortcut icon" type="image/png" href="./Adventure_Icon.png">
 </head>
 <body>	
-	<noscript>This webpage makes extensive use of JavaScript. Please enable JavaScript in your web browser to view this page.</noscript>	
 	<center>
-		<canvas id="webgl" width="1000" height="600">
-
-		</canvas>
+		<canvas id="webgl" width="1000" height="600"/>
 	</center>
 	<script type="text/javascript" src="./Adventure.js"></script>
 </body>
